--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
     "build": "npx tsc",
-    "dev": "npx nodemon --exec tsx src/index.ts"
+    "dev": "pnpm exec nodemon --exec tsx src/index.ts"
+
   },
   "keywords": [],
   "author": "",
